# whatsapp_miner

./: .actrc  .bashrc_backup  .cursorrules  .dockerignore  .doppler.yaml  .gitignore  DEPLOYMENT_DESIGN.md  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  alembic.ini  check_deployment.sh  check_status.sh  commands.txt  debug_deployment.sh  docker-compose.yml  docker_build.sh  docker_build_with_doppler.sh  docker_deploy.sh  docker_deploy_with_doppler.sh  docker_doc.md  docker_remote_run.sh  docker_run.sh  docker_run_core.sh  docker_run_remote.sh  docker_run_with_doppler.sh  docker_show_status.sh  docker_upload_runner.sh  docker_utils.sh  docker_validate_and_show_status.sh  docker_validate_setup.sh  docker_verify_deployment.sh  entrypoint.sh  entrypoint_message_classifier.sh  entrypoint_whatsapp_miner.sh  pyproject.toml  run_migrations.sh  run_tests.sh  test_deployment.sh  test_remote_echo.sh  (+3 more)
.doppler/: .doppler.yaml
.github/: deploy_with_act.sh  setup_act.sh
.github/workflows/: deploy.yml
deploy/: defaults.env
migrations/: env.py
migrations/versions/: 0001_create_users_groups.py  0002_create_messages.py  0003_create_lead_and_parsed_lookup_tables.py  0004_create_llm_prompt_templates.py  0005_create_classifications.py  0006_create_leads.py  0007_create_registered_businesses.py  0008_create_business_leads.py  0009_rename_tables_to_clearer_lead_and_.py  (+4 more)
src/: classify_new_messages.py  docker_debug.py  doppler_bootstrap.py  env_var_injection.py  main.py  paths.py  receive_notification.py
src/db/: db.py  (+3 more)
supabase/: config.toml
tests/: README.md  conftest.py
(+56 files in other folders)
