[project]
name = "whatsapp-miner"
version = "0.1.0"
description = ""
authors = [
	{ name = "noamAsusWSL", email = "noam@plai.live" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
	"requests (>=2.32.4,<3.0.0)",
	"whatsapp-chatbot-python (>=0.9.6,<0.10.0)",
	"whatsapp-api-client-python (>=0.0.49,<0.0.50)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
